# substrate-analytics

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Procfile  README.md  RustConfig  deployment.template.yml  docker-compose.yml  grafana_dashboard_01.json  grafana_dashboard_02.json  log_messages.txt  telemetry_messages.json
migrations/2019-02-11-181154_create_substrate_logs/: down.sql  up.sql
migrations/2019-02-18-122133_create_grafana_session_table/: down.sql  up.sql
migrations/2019-05-23-134208_create_idx_node_ip/: down.sql  up.sql
migrations/2019-05-23-135015_create_idx_msg_type/: down.sql  up.sql
migrations/2019-08-16-131907_create_peer_connections/: down.sql  up.sql
migrations/2019-08-16-131907_create_peers/: down.sql  up.sql
migrations/2019-08-16-132515_add_peer_to_substrate_logs/: down.sql  up.sql
migrations/2019-08-22-094016_create_index_on_peer_id/: down.sql  up.sql
migrations/2019-09-27-125919_create_index_created_at_msg_type/: down.sql  up.sql
migrations/2019-09-30-144205_add_audit_to_peer_connections/: down.sql  up.sql
migrations/2019-10-28-055145_create_benchmarking_systems/: down.sql  up.sql
migrations/2019-10-28-055145_create_host_systems/: down.sql  up.sql
migrations/2019-10-28-064727_create_benchmarks/: down.sql  up.sql
migrations/2019-12-11-135359_add_peer_id_to_benchmarks/: down.sql  up.sql
migrations/2019-12-13-130241_align_benchmarks/: up.sql
migrations/2019-12-13-161417_create_benchmark_events/: down.sql  up.sql
migrations/2020-04-10-113123_add_info_to_peer_connections/: down.sql  up.sql
migrations/2020-09-08-111742_create_index_on_peerset_nodes/: down.sql  up.sql
src/: main.rs  schema.rs
src/cache/: mod.rs
src/db/: benchmarks.rs  filters.rs  host_systems.rs  logs.rs  mod.rs  models.rs  nodes.rs  peer_data.rs  reputation.rs  stats.rs
src/util/: mod.rs
src/web/: benchmarks.rs  dash.rs  dashboard.rs  feed.rs  graphs.rs  host_systems.rs  metrics.rs  mod.rs  nodes.rs  reputation.rs  root.rs  stats.rs
static/benchmarks/: index.html
static/graphs/: index.html
static/health/: index.html
static/live/: index.html
static/node/: index.html
static/profiling/: index.html
static/reputation/: index.html
