[package]
name = "save"
version = "0.0.5"
authors = ["Matt Rutherford <matt@parity.io>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.7"
actix-web-actors = "1.0.2"
actix-http = "*"

diesel = { version = "1.4.2", features = ["postgres", "chrono", "network-address", "r2d2", "numeric", "serde_json"] }
bigdecimal = "0.0.11"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.13.0"
env_logger = "*"
failure = "0.1.1"
futures = "0.1"
json = "*"
lazy_static = "1.1.0"
log = "*"
num_cpus = "1.0"
parking_lot = "0.9"
serde_json = "1"
serde = "1"
serde_derive = "1"
