[package]
name = "substrate-analytics"
version = "0.1.2"
authors = ["Matt Rutherford <matt@parity.io>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-files = "0.2.1"
actix-http = "*"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"

awc = "1.0.1"
bytes = "0.5.3"
diesel = { version = "1.4.3", features = ["postgres", "chrono", "network-address", "r2d2", "numeric", "serde_json"] }
bigdecimal = "0.0.11"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.13.0"
env_logger = "0.6"
failure = "0.1.1"
futures = "0.3.1"
json = "*"
lazy_static = "1.1.0"
log = "*"
num_cpus = "1.0"
parking_lot = "0.9"
rand = "0.7.2"
serde_json = "1"
serde = "1"
serde_derive = "1"
statrs = "0.12.0"
