[package]
name = "substrate-analytics"
version = "0.1.4"
authors = ["Matt Rutherford <matt@parity.io>"]
edition = "2018"

[dependencies]
actix = "0.10.0-alpha.1"
actix-codec = "0.3.0"
actix-files = "0.3.0-beta.1"
actix-http = { version = "2.0.0-beta.3", features = ["openssl", "rustls", "compress", "secure-cookies", "actors"] }
actix-rt = "1.1.1"
actix-web = "3.0.0-beta.3"
actix-web-actors = "3.0.0-beta.1"
awc = "2.0.0-beta.3"

bytes = "0.5.3"
diesel = { version = "1.4.3", features = ["postgres", "chrono", "network-address", "r2d2", "numeric", "serde_json"] }
bigdecimal = "0.0.11"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.13.0"
env_logger = "0.6"
failure = "0.1.1"
futures = "0.3.5"
json = "*"
lazy_static = "1.1.0"
log = "*"
num_cpus = "1.0"
parking_lot = "0.11"
rand = "0.7.2"
serde_json = "1"
serde = "1"
serde_derive = "1"
slice-deque = "0.3.0"
statrs = "0.12.0"
sysinfo = "0.13.0"
